Funclogic/week5/5-191009/advanced1/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI

   3  expr : LET var EQ expr IN expr
   4       | IF expr THEN expr ELSE expr
   5       | arith_expr EQ arith_expr
   6       | arith_expr LT arith_expr
   7       | arith_expr AND arith_expr
   8       | arith_expr OR arith_expr
   9       | arith_expr XOR arith_expr
  10       | arith_expr

  11  arith_expr : arith_expr PLUS factor_expr
  12             | arith_expr MINUS factor_expr
  13             | factor_expr

  14  factor_expr : factor_expr TIMES atomic_expr
  15              | factor_expr DIV atomic_expr
  16              | atomic_expr

  17  atomic_expr : INT
  18              | BOOL
  19              | ID
  20              | LPAR expr RPAR

  21  var : ID

  22  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	.  error

	toplevel  goto 9
	expr  goto 10
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (17)

	.  reduce 17


state 4
	atomic_expr : BOOL .  (18)

	.  reduce 18


state 5
	atomic_expr : ID .  (19)

	.  reduce 19


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 14
	.  error

	var  goto 15


state 7
	expr : IF . expr THEN expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 17
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 8
	atomic_expr : LPAR . expr RPAR  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 18
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 9
	%entry% : '\001' toplevel .  (22)

	.  reduce 22


state 10
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 19
	.  error


state 11
	expr : arith_expr . EQ arith_expr  (5)
	expr : arith_expr . LT arith_expr  (6)
	expr : arith_expr . AND arith_expr  (7)
	expr : arith_expr . OR arith_expr  (8)
	expr : arith_expr . XOR arith_expr  (9)
	expr : arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (11)
	arith_expr : arith_expr . MINUS factor_expr  (12)

	PLUS  shift 20
	MINUS  shift 21
	EQ  shift 22
	LT  shift 23
	AND  shift 24
	OR  shift 25
	XOR  shift 26
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10


state 12
	arith_expr : factor_expr .  (13)
	factor_expr : factor_expr . TIMES atomic_expr  (14)
	factor_expr : factor_expr . DIV atomic_expr  (15)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	AND  reduce 13
	OR  reduce 13
	XOR  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13


state 13
	factor_expr : atomic_expr .  (16)

	.  reduce 16


state 14
	var : ID .  (21)

	.  reduce 21


state 15
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 29
	.  error


state 16
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 14
	.  error

	var  goto 30


state 17
	expr : IF expr . THEN expr ELSE expr  (4)

	THEN  shift 31
	.  error


state 18
	atomic_expr : LPAR expr . RPAR  (20)

	RPAR  shift 32
	.  error


state 19
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 20
	arith_expr : arith_expr PLUS . factor_expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 33
	atomic_expr  goto 13


state 21
	arith_expr : arith_expr MINUS . factor_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 34
	atomic_expr  goto 13


state 22
	expr : arith_expr EQ . arith_expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 35
	factor_expr  goto 12
	atomic_expr  goto 13


state 23
	expr : arith_expr LT . arith_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 36
	factor_expr  goto 12
	atomic_expr  goto 13


state 24
	expr : arith_expr AND . arith_expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 37
	factor_expr  goto 12
	atomic_expr  goto 13


state 25
	expr : arith_expr OR . arith_expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 38
	factor_expr  goto 12
	atomic_expr  goto 13


state 26
	expr : arith_expr XOR . arith_expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 39
	factor_expr  goto 12
	atomic_expr  goto 13


state 27
	factor_expr : factor_expr TIMES . atomic_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 40


state 28
	factor_expr : factor_expr DIV . atomic_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 41


state 29
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 42
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 30
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 43
	.  error


state 31
	expr : IF expr THEN . expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 44
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 32
	atomic_expr : LPAR expr RPAR .  (20)

	.  reduce 20


state 33
	arith_expr : arith_expr PLUS factor_expr .  (11)
	factor_expr : factor_expr . TIMES atomic_expr  (14)
	factor_expr : factor_expr . DIV atomic_expr  (15)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	AND  reduce 11
	OR  reduce 11
	XOR  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11


state 34
	arith_expr : arith_expr MINUS factor_expr .  (12)
	factor_expr : factor_expr . TIMES atomic_expr  (14)
	factor_expr : factor_expr . DIV atomic_expr  (15)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	AND  reduce 12
	OR  reduce 12
	XOR  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12


state 35
	expr : arith_expr EQ arith_expr .  (5)
	arith_expr : arith_expr . PLUS factor_expr  (11)
	arith_expr : arith_expr . MINUS factor_expr  (12)

	PLUS  shift 20
	MINUS  shift 21
	IN  reduce 5
	THEN  reduce 5
	ELSE  reduce 5
	RPAR  reduce 5
	SEMISEMI  reduce 5


state 36
	expr : arith_expr LT arith_expr .  (6)
	arith_expr : arith_expr . PLUS factor_expr  (11)
	arith_expr : arith_expr . MINUS factor_expr  (12)

	PLUS  shift 20
	MINUS  shift 21
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	SEMISEMI  reduce 6


state 37
	expr : arith_expr AND arith_expr .  (7)
	arith_expr : arith_expr . PLUS factor_expr  (11)
	arith_expr : arith_expr . MINUS factor_expr  (12)

	PLUS  shift 20
	MINUS  shift 21
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	SEMISEMI  reduce 7


state 38
	expr : arith_expr OR arith_expr .  (8)
	arith_expr : arith_expr . PLUS factor_expr  (11)
	arith_expr : arith_expr . MINUS factor_expr  (12)

	PLUS  shift 20
	MINUS  shift 21
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	SEMISEMI  reduce 8


state 39
	expr : arith_expr XOR arith_expr .  (9)
	arith_expr : arith_expr . PLUS factor_expr  (11)
	arith_expr : arith_expr . MINUS factor_expr  (12)

	PLUS  shift 20
	MINUS  shift 21
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9


state 40
	factor_expr : factor_expr TIMES atomic_expr .  (14)

	.  reduce 14


state 41
	factor_expr : factor_expr DIV atomic_expr .  (15)

	.  reduce 15


state 42
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 45
	SEMISEMI  shift 46
	.  error


state 43
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 47
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 44
	expr : IF expr THEN expr . ELSE expr  (4)

	ELSE  shift 48
	.  error


state 45
	expr : LET var EQ expr IN . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 49
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 46
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 47
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 45
	.  error


state 48
	expr : IF expr THEN expr ELSE . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 16
	IF  shift 7
	LPAR  shift 8
	.  error

	expr  goto 50
	arith_expr  goto 11
	factor_expr  goto 12
	atomic_expr  goto 13


state 49
	expr : LET var EQ expr IN expr .  (3)

	.  reduce 3


state 50
	expr : IF expr THEN expr ELSE expr .  (4)

	.  reduce 4


23 terminals, 8 nonterminals
23 grammar rules, 51 states
